--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am JokeR. This is the beginning of the end ;-) 
+            Hi! I am JokeR. \nThis is the beginning of the end ;-) 
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
