--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! I am JokeR.
+        </div>
+        <div>
             This is the beginning of the end ;-) 
         </div>
         <script type="text/javascript" src="/ui/main.js">
