[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,13 +5,13 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="http://diysolarpanelsv.com/images/joker-batman-clipart-10.jpg"/>
         </div>
         <br>
         <div class="center text-big bold">
             Hi! I am JokeR.
         </div>
-        <div>
+        <div class="center">
             This is the beginning of the end ;-) 
         </div>
         <script type="text/javascript" src="/ui/main.js">
