[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,14 +5,14 @@
     </head>
     <body>
         <div class="center">
-            <img src="http://diysolarpanelsv.com/images/joker-batman-clipart-10.jpg"/>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStz7nnzMreG-hdXFl5vhWqbbxXljzJTPKYAW0F8Ru0Xxg6mi8O"/>
         </div>
         <br>
         <div class="center text-big bold">
             Hi! I am JokeR.
         </div>
         <div class="center">
-            This is the beginning of the end ;-) 
+            <h3>This is the beginning of the end ;-) </h3>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
